[package]
name = "lemcom-api"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.37"
dotenv = "0.15.0"
mongodb = "2.8.2"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
